2016-04-18  Araki Ken  <arakiken@users.sf.net>

	* inputmethod/skk: Added.

	* im_wnn.c: Minor fixes.

	* x_im_status_screen.c: Incorrect redrawing on win32gdi is fixed.

	* configure.in: skk is enabled by default.

2016-04-10  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: The change of 1611 commit is reverted.

	* ml_vt100_parser.c: 0.01 sec interval is used for the limit of reading bytes in
	  ml_parse_vt100_sequence() instead of MAX_READ_COUNT.

	* ml_line.c: Fix https://sourceforge.net/p/mlterm/mailman/message/34992704/.

	* man/mlterm.1: U+XXXX-XXXX in ~/.mlterm/*font is documented.

	* kik_pty_{bsd|stream}.c: If B38400 is defined, B38400 is used instead of B9600.

2016-04-03  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1: Updated.

2016-03-23  Araki Ken  <arakiken@users.sf.net>

	* x_im_candidate_screen.c: The number of drawing candidate window is decreased.

	* x_im_status_screen.c: Minor fixes.

	* im_wnn.c:
	  - "[N/N]" is shown after preediting text.
	  - Candidate number is shown in candidate window.
	  - CAND_WINDOW_ROWS(==5) is defined.

2016-03-19  Araki Ken  <arakiken@users.sf.net>

	* registobmp/Makefile.in: Changeset 2562 commit (-lm is removed) is reverted.

	* ml_vt100_parser.c: "vt_color_mode" is added to OSC 5380 and 5381.

	* ml_color.[ch]: ml_get_color_mode() is added.

	* vte.c: Font size specified after font family in the 2nd argument of
	  vte_terminal_set_font_from_string() is applied to "fontsize" option.

	* version.h.in: 3.7.0 -> 3.7.0post

2016-03-13  Araki Ken  <arakiken@users.sf.net>

	* 3.7.0 released.
	  (tag "rel-3_7_0")

	* configure.in, mlterm.spec, main/version.h.in,
	  MLTermPty.c, android/jni/version.h:
	  updated for 3.7.0.

	* etc/main, etc/main.ja: Updated.

	* fb/x_color.c, fb/x_display.c: The type of the first argument of
	  x_cmap_get_closest_color() is reverted from u_int to u_long.

2016-03-12  Araki Ken  <arakiken@users.sf.net>

	* mlfc/main.c: 'mlfc -h' shows usage message.
