@@ -1,3 +1,10 @@
+2016-04-21  Araki Ken  <arakiken@users.sf.net>
+
+	* im_skk.c: ~/.skk-jisyo is loaded.
+
+	* kik_conf_io.c: Regular files whose names begin with "." in the home directory
+	  aren't checked if they should exit in ~/.config/ or not.
+
 2016-04-18  Araki Ken  <arakiken@users.sf.net>
 
 	* inputmethod/skk: Added.
